@@ -40,8 +40,9 @@
 		<forum>http://mods-kodi.pl/forum/</forum>
 		<website>http://mods-kodi.pl/</website>
 		<email>support@m-tvguide.pl</email>
-	<news>v9.4.4 (2021-07-21)
+	<news>v9.4.4 (2021-07-25)
 - Timebar fixes.
+- Added service Telewizja Polska.
 
 v9.4.3 (2021-07-20)
 - Updated set keys setting.
