@@ -92,6 +92,11 @@
 		<setting id="teliaplay_usern" visible="false"/>
 		
 		<setting type="sep"/>
+		<setting label="80007" type="lsep"/>
+		<setting id="tvp_enabled" type="bool" label="59904" default="false"/>
+		<setting id="priority_tvp" label="55009" type="enum" default="6" lvalues="55010|55011|55017|55012|55018|55013|55019|55014|55020|55021|55022|55023" visible="eq(-1,true)"/>
+		
+		<setting type="sep"/>
 		<setting label="80005" type="lsep"/>
 		<setting id="videostar_enabled" type="bool" label="59904" default="false"/>
 		<setting id="videostar_username" type="text" label="55002" default="" visible="eq(-1,true)"/>
