@@ -1,5 +1,6 @@
-﻿wersja 9.4.4 - 2021-07-21
+﻿wersja 9.4.4 - 2021-07-25
 - poprawka paska postepu czasu
+- dodany nowy serwis Telewizja Polska
 
 wersja 9.4.3 - 2021-07-20
 - zaktualizowana opcja wybierania klawiszy
